Get data from API and display it into ResultTable.
Results limited to 100 rows on API (temporary limit).

--- a/ui/package.json
+++ b/ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "codemirror": "^5.31.0",
     "d3-request": "^1.0.6",
     "deck.gl": "^4.1.5",
@@ -20,5 +21,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:4000/"
 }
