--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.0.0",
     "react-map-gl": "^3.1.1",
     "react-scripts": "1.0.14",
+    "react-shortcuts": "^2.0.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1"
   },
