--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://gitlab.com/martjanz/cuis#README",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "pg-promise": "^7.1.0"
   },
