--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "open": "^0.0.5",
     "pg-promise": "^7.1.0"
   },
   "devDependencies": {
